--- a/frontend/src/styles/petition.css
+++ b/frontend/src/styles/petition.css
@@ -1,24 +1,13 @@
-.petiton-container {
+.petition-container {
   margin: 50px 100px 50px 100px;
 }
-.petition-text-box {
-  width: 100%;
-  height: 300px;
-}
-.sign-petion {
-  margin-top: 80px;
-}
-.sign-petion span,
-.signed-petion-list p {
-  font-size: 20px;
-}
 
-.sign-petion button {
+.sign-petition-button {
   font-size: 16px;
-  margin-left: 30px;
+  margin-left: 30px !important;
 }
 
-.signed-petion-list {
+.signed-petition-list {
   margin-top: 20px;
 }
 
