--- a/frontend/src/styles/petitionsList.css
+++ b/frontend/src/styles/petitionsList.css
@@ -1,5 +1,3 @@
-/* styles/petitionsList.css */
-
 .petionsList-container {
   max-width: 1200px;
   margin: 0 auto;
@@ -61,4 +59,13 @@
   border-radius: 4px;
   cursor: pointer;
   width: 200px;
+}
+
+.petionsList {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-left: -100px;
+  font-size: 20px;
+  font-weight: bold;
 }
